--- a/My Hobbies.html
+++ b/My Hobbies.html
@@ -7,6 +7,7 @@
   <body>
     <h3>My Hobbies</h3>
     <ol>
+      <li><a href="https://open.spotify.com/playlist/6Xap55S8b2gBa4Au4sRO7K?si=nXTOmY3xTrykQzLa8stRIw&utm_source=whatsapp">Music</a></li>
       <li><a href="https://www.youtube.com/watch?v=klAbKqpTHpo">Badminton</a></li>
       <li><a href="https://www.youtube.com/watch?v=hUNAtr-xgyo">Cricket</a></li>
       <li>Computer Games</li>
