--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td> <img src="Tarunsoni.jpg" alt="Tarun Photo"></td>
       <td>
         <h1>Tarun Soni</h1>
-        <p>Student at <strong><a href="bitmesra.ac.in">BIT Mesra</a></strong></p>
+        <p>Student at <strong><a href="https://www.bitmesra.ac.in/">BIT Mesra</a></strong></p>
         <p>CSE Student. Also interested in technology and research & sports. </p>
       </td>
     </tr>
